# Apple

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
apis/: __init__.py  apple_music.py  itunes.py  telegram.py
configs/: config.yaml  logging.yaml  telegram.yaml
core/: __init__.py  decryptor.py  downloader.py  remuxer.py
docs/: api_reference.md  installation.md  usage.md
downloads/: .gitkeep
gamdl/: __init__.py  __main__.py  config.py  constants.py
logs/: .gitkeep
requirements/: base.txt  dev.txt  telegram.txt
scripts/: generate_cookies.py  setup.sh  update.sh
services/: __init__.py  auth_service.py  cache_service.py  download_service.py  file_cleanup_service.py  logging_service.py  notification_service.py
telegram/: __init__.py  bot.py  handlers.py  middlewares.py
tests/: __init__.py  test_auth.py  test_downloader.py  test_telegram_bot.py
utils/: __init__.py  error_handler.py  progress_tracker.py  rate_limiter.py
