[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gamdl"
version = "0.1.0"
description = "Advanced Music Downloader and Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "spotipy>=2.19.0",
    "youtube-dl>=2021.12.17",
    "mutagen>=1.45.1",
    "python-telegram-bot>=13.7",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=21.9b0",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "coverage>=5.5",
]
docs = [
    "sphinx>=4.1.2",
    "sphinx-rtd-theme>=0.5.2",
]

[project.scripts]
gamdl = "gamdl.cli:main"
gamdl-telegram = "gamdl.telegram_bot:start_bot"

[tool.setuptools]
packages = ["gamdl"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
